[gd_scene load_steps=8 format=3 uid="uid://7638wlo7xd36"]

[ext_resource type="Script" path="res://npc/npc_2.gd" id="1_y6p3g"]
[ext_resource type="Texture2D" uid="uid://d10mr0ppl4qea" path="res://asset/npc_grandfather.png" id="2_xl7k4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8pddi"]
atlas = ExtResource("2_xl7k4")
region = Rect2(0, 0, 84, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_paml2"]
atlas = ExtResource("2_xl7k4")
region = Rect2(141, 0, 84, 130)

[sub_resource type="SpriteFrames" id="SpriteFrames_pu2x8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pddi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_paml2")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wm300"]
size = Vector2(83, 126)

[sub_resource type="CircleShape2D" id="CircleShape2D_5i3iy"]
radius = 147.218

[node name="Npc2" type="CharacterBody2D"]
script = ExtResource("1_y6p3g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pu2x8")
animation = &"idle"
frame_progress = 0.192344

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 2)
shape = SubResource("RectangleShape2D_wm300")

[node name="chatDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="chatDetection"]
shape = SubResource("CircleShape2D_5i3iy")

[node name="Label" type="Label" parent="chatDetection"]
offset_left = -130.0
offset_top = -125.0
offset_right = 132.0
offset_bottom = -70.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "[E] to Interect"

[connection signal="body_entered" from="chatDetection" to="." method="_on_chat_detection_body_entered"]
[connection signal="body_exited" from="chatDetection" to="." method="_on_chat_detection_body_exited"]
